# QuantOS

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/backtester/: __init__.py  main.py
apps/live_trader/: main.py
apps/paper_trader/: main.py
apps/trade_visualizer/: main.py
configs/app/: backtest_ema_cross.yaml  paper_ema_cross_simulator.yaml
docs/architecture/: upgrade_roadmap.md
qcore/: __init__.py
qcore/accounting/: __init__.py
qcore/alpha/: __init__.py
qcore/analytics/: reporter.py
qcore/data/: __init__.py  engine.py  view.py  warmup.py
qcore/execution/: __init__.py
qcore/gates/: __init__.py  engine.py  model_alignment.py  pass_through.py
qcore/indicators/: __init__.py
qcore/kernel/: __init__.py
qcore/models/: __init__.py  engine.py  store.py  view.py
qcore/portfolio/: __init__.py
qcore/registry/: __init__.py  base.py  calendars.py  execution.py  gates.py  models.py  risk.py  strategies.py
qcore/risk/: __init__.py
qcore/services/: __init__.py
qcore/simulation/: __init__.py
scripts/: analyze_trade_regimes.py
tests/determinism/: test_backtest_determinism.py
tests/integration/: test_backtest_orchestrator_smoke.py  test_backtester_smoke.py  test_live_trader_smoke.py  test_paper_trader_smoke.py
tests/unit/: test_accounting.py  test_binance_live_source.py  test_bracket_exit_engine.py  test_calendars.py  test_config_loader.py  test_contracts.py  test_csv_replay.py  test_data_warmup.py  test_event_bar_builder.py  test_gate_engine.py  test_live_ingestion_runtime.py  test_market_data_engine.py  test_model_engine.py  (+15 more)
(+107 files in other folders)
