[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantos"
version = "0.1.0"
description = "Kernel-first quant operating system with a deterministic backtest vertical slice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0.2",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
live = [
    "websockets>=12.0",
]

[project.scripts]
quantos-backtest = "apps.backtester.main:main"
quantos-live = "apps.live_trader.main:main"
quantos-paper = "apps.paper_trader.main:main"

[tool.setuptools.packages.find]
include = ["qcore*", "apps*", "adapters*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
